--- a/BombasticBookstore/bombasticbookstore/templates/about.html
+++ b/BombasticBookstore/bombasticbookstore/templates/about.html
@@ -25,32 +25,46 @@
 				Welcome to Bombastic Bookstore Inventory Management Tool! Here, you can easily track all books within your inventory. 
 				Functionalities include (and are not limited to) adding new items, removing items, managing existing entries, and various 
 				user settings. Our goal is to provide you with an intuitive and efficient web-based tool to streamline inventory management, 
-				making sure that you always have the most accurate information. Navigate through the main menu to begin.<br><br>
+				making sure that you always have the most accurate information. Navigate through the main menu to begin.
 			</p>
-			<h3>Key Features</h3>
+			<h2>Key Features</h2>
 			<ul>
 				<li><b>Real-Time Inventory Tracking:</b> Keep up-to-date information of the entire stock.</li>
 				<li><b>Easy Data Management:</b> Adding, updating, and removing items is just a few clicks away!</li>
 				<li><b>Search and Filter:</b> Quickly find books by title, ISBN, or author.</li>
 				<li><b>Easy-to-use Interface:</b> Bombastic's interface is intuitive and simple to use.</li>
-			</ul><br>
-			<h3>Decision Making</h3>
+			</ul>
+			<h2>Decision Making</h2>
 			<p>
 				Our backend for Bombastic is written primarily in Python and stood up by Django web framework, while our database is SQL. We chose Django 
 				for its scalability and ease-of-use, with the intention that we would be able to pass on the efficiency to the user. 
 				By design, Bombastic is also scalable, allowing the customer to grow or shrink comfortably with minimal effort. Bombastic
 				is also highly modular, which feeds into scalability. Entire pages can be added easily and quickly to the main web application. 
-				We decided on a SQL database primarily for the structured data storage and vertical scalability. Ultimately, we chose tools that reflected our goals.<br><br>
+				We decided on a SQL database primarily for the structured data storage and vertical scalability. Ultimately, we chose tools that reflected our goals.
 			</p>
-			<h3>Why Bombastic?</h3>
+			<h2>Technology Stack</h2>
+			<ul>
+				<li><b>Frontend: </b>HTML, CSS, JavaScript</li>
+				<li><b>Backend: </b>Python and Django</li>
+				<li><b>Database: </b>SQL for structured data storage</li>
+				<li><b>Hosting: </b>AWS (upon deployment, it is hosted locally in development)</li>
+				<li><b>Version Control: </b>Git and GitHub</li>
+			</ul>
+			<h2>Why Bombastic?</h2>
 			<ul>
 				<li>Made by bookworms, for bookworms!</li>
 				<li>Built with scalability and flexibility in mind.</li>
 				<li>Security and accuracy are our goals!</li>
 			</ul>
-			<br>
-			<p>
+			<h2>Our Mission</h2>
+			<p>To empower book lovers and business owners alike with a reliable and scalable tool tailored to their needs.</p>
+			<h2>Our Vision</h2>
+			<p>A world where managing a bookstore is as easy as reading your favorite novel.</p>
+			<h2>Acknowledgments</h2>
+			<p>A huge thank you to all our developers for working hard to get Bombastic up and running!</p><br><br>
+			<p><b>
 				Thank you for choosing Bombastic Bookstore for your inventory needs!
+				</b>
 			</p>
 			<div style="float:right;">
 				<img class="eagle-logo" src='{% static "./bombastic.png" %}' alt="Bombastic Bookstore Wake Tech Logo">
